--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -1,5 +1,29 @@
 #!/usr/bin/markdownlint -c
 
+### File: .markdownlintrc
+##
+## ファイルの検証・作成・変換を行う。
+##
+## Usage:
+##
+## ------ Text ------
+## markdownlint -c .markdownlintrc
+## ------------------
+##
+## Metadata:
+##
+##   id - cae040a3-9151-48ab-85e9-4b5e71408324
+##   author - <qq542vev at https://purl.org/meta/me/>
+##   version - 1.0.0
+##   created - 2025-05-14
+##   modified - 2025-05-14
+##   copyright - Copyright (C) 2025-2025 qq542vev. All rights reserved.
+##   license - <GNU GPLv3 at https://www.gnu.org/licenses/gpl-3.0.txt>
+##
+## See Also:
+##
+##   * <Project homepage at https://gist.github.com/qq542vev/635e8c27c9c0b163b9dcebed80418dc1>
+
 # MD007/ul-indent - Unordered list indentation
 MD007:
   # Spaces for indent
